<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_nav_about"
        android:title="@string/button_nav_about" />
    <item
        android:id="@+id/navBuy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_nav_buy"
        android:title="@string/button_nav_buy" />
    <item
        android:id="@+id/navTimetable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_nav_timetable"
        android:title="@string/button_nav_timetable" />
    <item
        android:id="@+id/navComments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_nav_comments"
        android:title="@string/button_nav_comments" />
    <item
        android:id="@+id/navProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/button_nav_profile" />
</menu>