<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.TimetableFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewTimetableTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light"
            android:fontFamily="@font/roboto_italic"
            android:padding="12dp"
            android:text="@string/title_schedule"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <TableLayout
            android:id="@+id/tableLayoutTimetable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:stretchColumns="*"

            app:layout_constraintTop_toBottomOf="@+id/textViewTimetableTitle">

            <!-- Header Row -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button">

                <TextView
                    android:fontFamily="@font/roboto_light"
                    android:gravity="center"
                    android:padding="12dp"
                    android:background="@drawable/border"
                    android:text="@string/table_number"
                    android:textColor="@color/white" />

                <TextView
                    android:fontFamily="@font/roboto_light"
                    android:gravity="center"
                    android:padding="12dp"
                    android:text="@string/table_name"
                    android:textColor="@color/white" />

                <TextView
                    android:fontFamily="@font/roboto_light"
                    android:gravity="center"
                    android:padding="12dp"
                    android:text="@string/table_price"
                    android:textColor="@color/white" />

                <TextView
                    android:fontFamily="@font/roboto_light"
                    android:gravity="center"
                    android:padding="12dp"
                    android:text="@string/table_where"
                    android:textColor="@color/white" />

            </TableRow>

            <!-- Dynamic Rows will be added here programmatically -->

        </TableLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>