<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.BuyFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewBuyTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light"
            android:fontFamily="@font/roboto_italic"
            android:padding="12dp"
            android:text="@string/tv_buying_tickets"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewBuyTitle">

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:text="@string/tv_name"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@drawable/border"
                android:hint="@string/et_name"
                android:fontFamily="sans-serif-light"
                android:inputType="text"
                android:padding="10dp"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/textViewName" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            app:layout_constraintTop_toBottomOf="@+id/constraintName">

            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:text="@string/tv_email"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@drawable/border"
                android:hint="@string/et_email"
                android:fontFamily="sans-serif-light"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/textViewEmail" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintDestination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            app:layout_constraintTop_toBottomOf="@id/constraintEmail">

            <TextView
                android:id="@+id/textViewDestination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:text="@string/tv_destination"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/editTextDestination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@drawable/border"
                android:hint="@string/et_destination"
                android:fontFamily="sans-serif-light"
                android:inputType="text"
                android:padding="10dp"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/textViewDestination" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            app:layout_constraintTop_toBottomOf="@id/constraintDestination">

            <TextView
                android:id="@+id/textViewNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:text="@string/tv_number_of_tickets"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/editTextNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@drawable/border"
                android:hint="@string/et_number_of_tickets"
                android:inputType="numberDecimal"
                android:fontFamily="sans-serif-light"
                android:padding="10dp"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/textViewNumber" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/buttonBuy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:layout_marginBottom="74dp"
            android:background="@drawable/bg_button"
            android:fontFamily="sans-serif-light"
            android:text="@string/button_buy_ticket"
            app:backgroundTint="@null"

            app:layout_constraintBottom_toBottomOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>