<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewProfileTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light"
            android:fontFamily="@font/roboto_italic"
            android:padding="12dp"
            android:text="@string/title_profile"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintProfileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/border"
            android:layout_margin="14dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewProfileTitle">

            <TextView
                android:id="@+id/textViewProfileNameHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:padding="7dp"
                android:text="@string/tv_name"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/textViewProfileName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:padding="10dp"
                android:text="@string/tv_example_name"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/textViewProfileNameHeader" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintProfileEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@drawable/border"
        android:layout_margin="14dp"
        app:layout_constraintTop_toBottomOf="@+id/constraintProfileName">

        <TextView
            android:id="@+id/textViewProfileEmailHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:padding="7dp"
            android:text="@string/tv_email"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textTextProfileEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:padding="10dp"
            android:text="@string/tv_example_email"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/textViewProfileEmailHeader" />

    </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintProfileTicket"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/border"
            android:layout_margin="14dp"
            app:layout_constraintTop_toBottomOf="@+id/constraintProfileEmail">

            <TextView
                android:id="@+id/textViewProfileTicketHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:padding="7dp"
                android:text="@string/tv_number_of_tickets_purchased"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/textTextProfileTicket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:padding="10dp"
                android:text="@string/tv_example_number_of_tickets_purchased"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/textViewProfileTicketHeader" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>