<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AboutFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewBuyTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light"
            android:fontFamily="@font/roboto_italic"
            android:padding="12dp"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewAboutHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:padding="12dp"
            android:text="@string/button_nav_about"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/textViewBuyTitle" />

        <androidx.cardview.widget.CardView
            android:id="@+id/imageViewAir"
            android:layout_width="match_parent"
            android:layout_height="296dp"
            android:layout_margin="10dp"
            app:cardCornerRadius="20dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintTop_toBottomOf="@+id/textViewAboutHeader">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/image_airlines"
                android:src="@drawable/air" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textViewAboutBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/about_info"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/imageViewAir" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>